# GeoGebra-Script-Lab

./: .dockerignore  .env.example  .eslintrc.json  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  index.html  package.json  pnpm-lock.yaml  vercel.json  vite.config.js
.github/workflows/: build.yml  dependabot-maintenance.yml  docker-images.yml
backend/: Cargo.toml
backend/.cargo/: config.toml
backend/src/: admin.rs  app.rs  auth.rs  config.rs  error.rs  frontend.rs  main.rs  metrics.rs  model.rs  state.rs  storage.rs  threat_intel.rs  types.rs  utils.rs
backend/src/http/: handlers.rs  responses.rs
backend/src/store/: cache.rs  mod.rs  mongo.rs
docs/: GeoGebra 综合科技编程项目实践报告.md  advanced-ux-feature-spec.md  frontend-backend-integration.md  synapse-oauth-integration.md
scripts/: fix-dependabot-alerts.js
src/: index.css
src/api/: backend.js
src/components/: AdminConsole.css  AdminConsole.jsx  App.css  App.jsx  AppAuthPage.jsx  AppBackendPage.jsx  AppIcon.jsx  AppOverviewPage.jsx  AuthPanel.css  AuthPanel.jsx  BackendPanel.css  BackendPanel.jsx  CodeEditor.css  CodeEditor.jsx  ControlPanel.css  ControlPanel.jsx  GeoGebraContainer.css  GeoGebraContainer.jsx  LogPanel.css  LogPanel.jsx  MonacoCodeEditor.jsx
src/engine/: Dispatcher.js  GeoGebraEngine.js  Preprocessor.js
src/hooks/: useAppRoute.js
src/utils/: appRoutes.js  auth.js  studio.js
