[package]
name = "geograba-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5"
base64 = "0.22"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
http = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["http1", "http2", "server"] }
hyper-util = { version = "0.1", features = ["server", "server-auto", "tokio"] }
mongodb = "3"
rand_core = { version = "0.6", features = ["getrandom"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "net"] }
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = true
