[package]
name = "geograba-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
bytes = "1.11.1"
chrono = { version = "0.4.44", features = ["serde"] }
http = "1.4.0"
http-body-util = "0.1.3"
hyper = { version = "1.9.0", features = ["http1", "http2", "server"] }
hyper-util = { version = "0.1.20", features = ["server", "server-auto", "tokio"] }
mongodb = "3.6.0"
reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread", "sync", "time", "net"] }
url = "2.5.8"
uuid = { version = "1.23.1", features = ["v4", "serde"] }

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = true
